<resources>
    <string name="app_name">Autto</string>
    <string name="preference_file_key">dev.handeul.autto.DHACCOUNT</string>
    <string name="login">로그인</string>
    <string name="main_draw_num_dummy">000</string>
    <string name="main_draw_countdown_dummy">01일 18시간 24분 30초</string>
    <string name="main_draw_text1">회 결과발표까지</string>
    <string name="main_draw_text2">남았습니다.</string>
    <string name="main_bought_num_title">이번 주 구매 번호</string>
    <string name="main_deposit_title">예치금</string>
    <string name="my_deposit">나의 예치금</string>
    <string name="set_purchase"><u>구매설정</u></string>
    <string name="charge">충전</string>
    <string name="deposit_unit">원</string>
    <string name="default_deposit_balance">0</string>
    <string name="login_welcome">환영합니다.</string>
    <string name="login_help">동행 복권 계정으로 로그인해 주세요.</string>
    <string name="login_label_id">아이디</string>
    <string name="login_label_pw">비밀번호</string>
    <string name="login_placeholder_id">아이디를 입력해주세요.</string>
    <string name="login_placeholder_pw">비밀번호를 입력해주세요.</string>
    <string name="login_no_account"><u>계정이 없어요 :(</u></string>
    <string name="result">당첨결과</string>
    <string name="recent_round_num">최근 회차 번호</string>
    <string name="nth_round_result">회 당첨 결과</string>
    <string name="dummy_date">(0000. 00. 00) 추첨</string>
    <string name="expire_duration">지급기한 1년</string>
    <string name="my_num">내 번호</string>
    <string name="no_history">구매 기록이 없습니다.</string>
    <string name="plus_icon">plus icon</string>
    <string name="confirm">확인</string>
    <string name="purchase_schedule">구매 일정</string>
    <string name="purchase_i">저는</string>
    <string name="purchase_every">마다</string>
    <string name="purchase_won">원 씩</string>
    <string name="purchase_auto">으로</string>
    <string name="purchase_do">구매할래요</string>
    <string name="purchase_label_frequency">얼마나 자주 구매할지 선택해주세요</string>
    <string name="purchase_label_amount">얼마의 금액으로 구매할지 선택해주세요</string>
    <string name="purchase_label_auto">어떤 방식으로 구매할지 선택해주세요</string>
    <string-array name="purchase_frequency">
        <item>1주일</item>
        <item>1개월</item>
    </string-array>
    <string-array name="purchase_amount">
        <item>1,000</item>
        <item>2,000</item>
        <item>3,000</item>
        <item>4,000</item>
        <item>5,000</item>
    </string-array>
    <string-array name="purchase_auto">
        <item>자동</item>
        <item>수동</item>
    </string-array>

</resources>
