<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingStart="12dp"
    android:paddingTop="8dp"
    android:paddingEnd="12dp"
    android:paddingBottom="8dp"
    tools:context=".fragment.DepositFragment">

    <TextView
        android:id="@+id/myDepositText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/my_deposit"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="8"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/depositBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_deposit_balance"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/depositUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit_unit"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_weight="1"
        android:background="@drawable/button_rounded"
        android:text="@string/charge"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

</LinearLayout>