<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resultActionBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBack2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="21dp"
            android:background="@drawable/ico_back"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/recent_round_num"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/resultActionBar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/my_num"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/lastResultLayout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="21dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="21dp" />

    <LinearLayout
        android:id="@+id/lastResultLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/rounded"
        android:elevation="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDrwNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_draw_num_dummy"
                android:textColor="#f53759"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nth_round_result"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtDrwDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/dummy_date"
            android:textColor="#9d9d9d"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <dev.handeul.autto.view.LottoBallView
                android:id="@+id/lottoBallView1"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1" />

            <dev.handeul.autto.view.LottoBallView
                android:id="@+id/lottoBallView2"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1" />

            <dev.handeul.autto.view.LottoBallView
                android:id="@+id/lottoBallView3"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1" />

            <dev.handeul.autto.view.LottoBallView
                android:id="@+id/lottoBallView4"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1" />

            <dev.handeul.autto.view.LottoBallView
                android:id="@+id/lottoBallView5"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1" />

            <dev.handeul.autto.view.LottoBallView
                android:id="@+id/lottoBallView6"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/icoPlus"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:contentDescription="@string/plus_icon"
                app:srcCompat="@drawable/ico_plus" />

            <dev.handeul.autto.view.LottoBallView
                android:id="@+id/bonusBallView"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtExpire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:text="@string/expire_duration"
            android:textAlignment="textEnd"
            android:textColor="#9d9d9d"
            android:textSize="11sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buyListLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="21dp"
        android:paddingTop="16dp"
        android:paddingEnd="21dp"
        android:paddingBottom="16dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="28dp"
            android:text="@string/no_history"
            android:textAlignment="center"
            android:textColor="#d9d9d9"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>