<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PurchaseSettingActivity">

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="32dp"
        android:background="#f33d5d"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/amountSpinner"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/purchase_label_amount"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/purchase_won"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/amountSpinner"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

<!--    <Spinner-->
<!--        android:id="@+id/autoSpinner"-->
<!--        android:layout_width="275dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:contentDescription="@string/purchase_label_auto"-->
<!--        android:gravity="center_vertical"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        app:layout_constraintStart_toStartOf="@+id/guideline7"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/amountSpinner" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView11"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/purchase_every"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toEndOf="@+id/freqSpinner"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView9" />-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/purchaseActionBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="21dp"
            android:background="@drawable/ico_back"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_schedule"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="21dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/purchase_i"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/purchaseActionBar" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/purchase_do"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/amountSpinner" />

<!--    <TextView-->
<!--        android:id="@+id/textView10"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:gravity="center"-->
<!--        android:text="@string/purchase_auto"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toEndOf="@+id/autoSpinner"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView12" />-->

<!--    <Spinner-->
<!--        android:id="@+id/freqSpinner"-->
<!--        android:layout_width="275dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:contentDescription="@string/purchase_label_frequency"-->
<!--        android:gravity="center_vertical"-->
<!--        android:paddingStart="12dp"-->
<!--        android:paddingEnd="12dp"-->
<!--        app:layout_constraintStart_toStartOf="@+id/guideline7"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView9" />-->
</androidx.constraintlayout.widget.ConstraintLayout>